--- a/HorarioCSS/horario.html
+++ b/HorarioCSS/horario.html
@@ -28,10 +28,10 @@
     <link rel="stylesheet" href="horario.css">
 </head>
 <body>
-    <table>
+    <table border="1">
         <caption>
             <h2>Horario Jose Luis Tárraga Segura</h2>
-            <p>Curso 2023/2024</p>
+            <h4>Curso 2023/2024</h4>
         </caption>
         <tr>
             <th>
@@ -56,111 +56,80 @@
         <tr>
             <th>14:35-15:30</th>
             <th class="tutoria">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=108322">(TUT)</a></p>
-                <p>Tutoria</p>
-                <p>Javier</p>
+                <!--La abreviatura de la asignatura pasará a ser el enlace a Aules-->
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=108322">(TUT)</a>
             </th>
             <th class="diseño">
-               <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a></p>
-               <p>Diseño</p>
-               <p>Fran</p>
+               <a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a>
             </th>
             <th rowspan="3" class="cliente">
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>  </p>
-                <p>Cliente</p>
-                <p>Jose Miguel</p>
+                 <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>
             </th>
             <th rowspan="2"></th>
             <th rowspan="2" class="despligues">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a></p>
-                <p>Despliegues</p>
-                <p>Jose David</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a>
             </th>
         </tr>
         <tr>
             <th>15:30-16:25</th>
             <th rowspan="2" class="cliente">
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>  </p>
-                <p>Cliente</p>
-                <p>Jose Miguel</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>
             </th>
             <th rowspan="2" class="cliente" >
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>  </p>
-                <p>Cliente</p>
-                <p>Jose Miguel</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>
             </th>
         </tr>
         <tr>
             <th>16:30-17:20</th>
             <th class="despligues">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a></p>
-                <p>Despliegues</p>
-                <p>Jose David</p>
+                
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a>
             </th>
             <th class="diseño">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a></p>
-                <p>Diseño</p>
-                <p>Fran</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a>
             </th>
         </tr>
         <tr>
             <th>17:20-17:40</th>
-            <th colspan="5" class="recreo">😀Recreo😀</th>
+            <th colspan="5" >😀Recreo😀</th>
         </tr>
         <tr>
             <th>17:40-18:35</th>
             <th class="cliente">
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>  </p>
-                <p>Cliente</p>
-                <p>Jose Miguel</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>
             </th>
             <th class="cliente">
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>  </p>
-                <p>Cliente</p>
-                <p>Jose Miguel</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=107220">(CLT)</a>
             </th>
             <th rowspan="2" class="servidor">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a></p>
-                <p>Servidor</p>
-                <p>Javier</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a>
             </th>
             <th class="despligues">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a></p>
-                <p>Despliegues</p>
-                <p>Jose David</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111565">(DSP)</a>
             </th>
             <th rowspan="2" class="diseño">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a></p>
-                <p>Diseño</p>
-                <p>Fran</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a>
             </th>
         </tr>
         <tr>
             <th>18:35-19:30</th>
             <th rowspan="3" class="servidor">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a></p>
-                <p>Servidor</p>
-                <p>Javier</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a>
             </th>
             <th rowspan="3" class="empresa">
-                <p> <a href="https://aules.edu.gva.es/fp/course/view.php?id=123459">(EMP)</a> </p>
-                <p>Empresa</p>
-                <p>Itziar</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=123459">(EMP)</a>
             </th>
             <th rowspan="3" class="servidor">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a></p>
-                <p>Servidor</p>
-                <p>Javier</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=111268">(SVR)</a>
             </th>
             
         </tr>
         <tr>
             <th>19:30-20:25</th>
             <th rowspan="2" class="diseño">
-                <p><a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a></p>
-                <p>Diseño</p>
-                <p>Fran</p>
+                <a href="https://aules.edu.gva.es/fp/course/view.php?id=110624">(DSÑ)</a>
             </th>
+            <th rowspan="2"></th>
         </tr>
         <tr>
             <th>20:25-21:20</th>
