--- a/HtmlSemantico/index.html
+++ b/HtmlSemantico/index.html
@@ -25,11 +25,21 @@
         <section></section>
     </aside>
     <main>
-        <div></div>
-        <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam consequuntur harum quaerat rerum cum, eligendi dolor dignissimos in aspernatur et vitae nulla doloremque aperiam sit suscipit eum nam facere iusto.
-        Sequi nesciunt dolore perferendis sit a blanditiis perspiciatis error nulla debitis magnam id, exercitationem doloremque reiciendis. Excepturi perferendis neque, ea porro cupiditate aspernatur necessitatibus, nam, dolorem reiciendis non possimus sit!
-        Accusantium, autem tenetur unde optio sit ipsum nemo, nulla aut fugiat nisi, repudiandae nobis quas hic iste doloribus dolor? Temporibus facilis itaque harum rem odit laboriosam totam consequuntur ullam amet!
-        Voluptates eius cum explicabo quia deserunt iste assumenda corrupti vero quidem provident earum, aspernatur sint maiores rem! Inventore, autem recusandae velit, cumque neque voluptates, doloremque amet temporibus aperiam impedit maxime!</article>
+        <div><h1>Noticia del día</h1></div>
+        <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. A porro harum corporis sunt ut quibusdam minima quae sit eos dicta. Provident blanditiis natus excepturi labore aut distinctio soluta delectus doloremque.
+        Soluta, quaerat pariatur? Inventore rerum est doloremque eligendi animi! Ipsum eius magni quos quidem tempora tempore doloribus quo dignissimos omnis velit veniam, ullam dicta veritatis dolorem iste non assumenda inventore.
+        Praesentium nobis veniam suscipit aspernatur sed ad soluta, iste, esse officia facilis ipsa ipsum incidunt earum repellat quidem voluptatem iure iusto fugit, hic deserunt aliquid sapiente in. Veniam, doloremque dolor.
+        Blanditiis consectetur dolorem voluptatibus minus, ratione numquam facere ab magnam deleniti libero beatae, qui, provident sit sunt! Rem necessitatibus quasi, nisi facere maiores laudantium dolorum, assumenda sit molestiae numquam cum.
+        Dicta consectetur consequatur impedit dolorum est dolores odit dignissimos nam? Temporibus, accusamus maxime ea impedit sit eos non necessitatibus ab ullam, perspiciatis debitis dolores nemo ut sed provident nihil quidem?
+        Voluptate, obcaecati at neque unde, sunt beatae libero eligendi animi fuga quae laboriosam. Possimus, iure. Atque repellendus, blanditiis deleniti earum assumenda consectetur eaque aut, animi, reprehenderit nam officiis voluptates numquam?
+        Eum dicta fugiat ex expedita iste ratione labore, pariatur distinctio maiores neque unde fugit eius blanditiis, veniam ab aut reiciendis harum provident dolorum iure excepturi accusamus dolores! Repudiandae, necessitatibus enim.
+        Eos dolor deserunt velit, illum quaerat quisquam iusto corporis eligendi, quas a doloribus ea sed incidunt sunt nam dignissimos dolore nostrum, laborum veniam iste sit? Natus architecto itaque possimus voluptate.
+        Voluptates assumenda natus error itaque nobis, quasi molestias, cupiditate aliquid, dolor autem illo omnis! Cumque consectetur exercitationem laudantium nisi velit, voluptatibus asperiores optio quos quo. Sunt, eum odio? Vel, corporis.
+        Magni adipisci provident praesentium. Quo consequuntur laudantium nostrum accusantium consectetur iusto et a odio provident totam sunt, omnis at, eaque similique nulla. Et porro dolorem, pariatur dignissimos facilis deleniti? Consequatur!
+        Molestiae ipsum sit asperiores fuga numquam magni rem delectus? Facilis, distinctio eveniet doloremque laudantium consectetur pariatur reprehenderit optio esse eum, ratione eius magnam saepe! Molestias repellat unde nobis ea earum?
+        Consectetur alias molestias esse id ut temporibus fugiat et in saepe error earum illum doloribus provident quod libero molestiae quia animi delectus est reprehenderit voluptatem quaerat, velit dolorum nobis? In.
+        Inventore facilis delectus illum vitae qui deserunt ipsum quo omnis iste repudiandae, maxime quibusdam voluptatibus quae dignissimos voluptates. Provident adipisci temporibus facilis. Quos doloremque rem vitae voluptatibus ipsam, praesentium dolorem?
+        Labore assumenda nam exercitationem numquam illo dolorum libero cumque officia! Porro quo maiores modi excepturi sit consequatur deserunt repudiandae saepe exercitationem distinctio aliquid quasi totam, omnis, laborum eius voluptatem atque?</article>
     </main>
     <aside class="aside2">
 
