--- a/TareaPokedex/Competicion1/EjercicioPokedex.html
+++ b/TareaPokedex/Competicion1/EjercicioPokedex.html
@@ -61,7 +61,18 @@
         <div class="casilla"><p>Fuego/Volador</p></div>
         <div class="boton"><button></button></div>
       </div>
-      <div class="stats"></div>
+      <div class="stats">
+        <h2>Ataque</h2>
+        <h2>SpeAtk</h2>
+        <h2>Defensa</h2>
+        <h2>SpeDfs</h2>
+        <h2>HP</h2>
+        <div class="atk"><div></div></div>
+        <div class="satk"><div></div></div>
+        <div class="dfs"><div></div></div>
+        <div class="sdfs"><div></div></div>
+        <div class="hp"><div></div></div>
+      </div>
       <div class="imagen"></div>
     </div>
    </body>
