--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -33,14 +33,21 @@
     <main class="container-fluid">
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-4 h-75 ">
+            <div class="col-4 h-75">
                 <br>
                 <br>
                 <br>
                 <br>
                 <br>
-                <h1>Bienvenido a HBASICSPORT</h1>
-                <p>No te pierdas nada </p>
+                <h1 class="sombra h1size">Bienvenido a HBASICSPORT</h1>
+                <p class="w-75 size sombra">Encuentra tu outfit perfecto para entrenar. Todos
+                    y todas mirarán tú reluciente y entrenado cuerpo
+                    cuando lleves puesta alguna de nuestras prendas.
+                    ¡Corre a comprar una de nuestras comodas y 
+                    baratas</p>
+                <br>
+                <br>
+
             </div>
             <div id="carouselExampleSlidesOnly" class="carousel slide col-6 h-75" data-bs-ride="carousel">
                 <div class="carousel-inner">
