--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -33,23 +33,16 @@
     <main class="container-fluid">
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-4 h-75">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+            <div class="col-4 h-75 mt-sm-5 mt-3">
                 <h1 class="sombra h1size">Bienvenido a HBASICSPORT</h1>
                 <p class="w-75 size sombra">Encuentra tu outfit perfecto para entrenar. Todos
                     y todas mirarán tú reluciente y entrenado cuerpo
                     cuando lleves puesta alguna de nuestras prendas.
                     ¡Corre a comprar una de nuestras comodas y 
                     baratas</p>
-                <br>
-                <br>
-
+                <button type="button" class="btn btn-dark sombra">¡Compra ahora!</button>
             </div>
-            <div id="carouselExampleSlidesOnly" class="carousel slide col-6 h-75" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide col-6 h-50" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="https://img.freepik.com/foto-gratis/hermosa-joven-atleta-practicando-espacios-blanco-retrato-sombras_155003-21326.jpg?t=st=1698425418~exp=1698426018~hmac=e7080c85bef2ac48c4acf024da4ea7400f38e3346c63b9e65af66477b28c1940" class="d-block w-100" alt="Hombre haciendo deporte">
@@ -63,7 +56,6 @@
                 </div>
               </div>    
         </div>
-        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
