--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -13,9 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow&family=Bebas+Neue&family=Dancing+Script:wght@400;700&family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="iniciosesion.css">
     <title>HBASICSPORT</title>
 </head>
 <body>
+
+
+  <!-- HEADER-->
     <header class="col-12 container-fluid">
         <div class="row d-flex align-items-center">
             <div class="col-7 col-lg-3 h-25 d-flex align-items-center justify-content-center">
@@ -26,9 +30,9 @@
             </div>
             <div class="col-3 botones sombra d-none d-lg-flex">
                 <a href="">Tienda</a>
-                <a href="">Información</a>
-                <a href="">Registrarse</a>
-                <a href="" class="inicio col-4 ">Iniciar Sesión</a>
+                <a href="#informacion">Información</a>
+                <a href="registro.html">Registrarse</a>
+                <button id="inicioSesion" class="inicio col-4 ">Iniciar Sesión</button>
             </div>
             <button class="d-inline col-2 d-lg-none botonicono sombra" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="bi bi-list"></i></button>
 
@@ -38,19 +42,74 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body d-flex flex-column">
-                <a href="" class="w-100 enlacesMenu mb-2">Tienda</a>
-                <a href="" class="w-100 enlacesMenu mb-2">Información</a>
-                <a href="" class="w-100 enlacesMenu mb-2">Registrarse</a>
-                <a href="" class="inicioMenu w-75">Iniciar Sesión</a>
+                  <a href="" class="w-100 enlacesMenu mb-2">Tienda</a>
+                  <a href="#informacion" class="w-100 enlacesMenu mb-2">Información</a>
+                  <a href="registro.html" class="w-100 enlacesMenu mb-2">Registrarse</a>
+                  <button  id="inicioSesion2" class="inicioMenu w-75">Iniciar Sesión</button>
                 </div>
             </div>
         </div>
     </header>
+
+    
+  <!-- DIALOG -->
+    <dialog id="favDialog" class="dialog">
+      <div class="row container">
+        <div class="col-11"></div>
+        <button id="close" class="botoncross col-1 mt-2"><i class="bi bi-x-lg cross"></i></button>
+      </div>
+      <div class="row container">
+          <div class="col-5"></div>
+          <img src="https://cdn-icons-png.flaticon.com/512/6016/6016314.png" alt="Foto logo" class="col-2 h-100 sombra">
+          <div class="col-5"></div>
+      </div>
+      <div class="row container mt-2">
+        <div class="col-1"></div>
+        <h1 class="col-8">Inicio sesión</h1>
+      </div>
+      <form action="" method="post">
+        <!-- <div class="row container mt-2">
+          <div class="col-1"></div>
+          <label  class="col-11">Correo electronico:</label>
+        </div>-->
+        <div class="row container mt-4">
+          <div class="col-1"></div>
+          <input id="nombreCorreo" type="text" class="inputBonito w-75 col-11" placeholder="Correo electronico">
+        </div>
+        <!--<div class="row container mt-4">
+          <div class="col-1"></div>
+          <label  class="col-11">Contraseña:</label>
+        </div>-->
+        <div class="row container mt-3">
+          <div class="col-1"></div>
+          <input id="contraseña" type="text" class="inputBonito w-75 col-11" placeholder="Contraseña">
+        </div>
+        <div class="row container mt-4">
+          <div class="col-1"></div>
+          <input type="submit" value="Iniciar sesión" class="col-11 w-75 me-2 botonInicioSesion">
+        </div>
+      </form>
+      <div class="row container mt-2">
+        <p class="col-12 text-center olvidado">¿Has olvidado tu contraseña?<a href="" class="enlaceClicaaquí"> Clica aquí.</a></p>
+      </div>
+      <div class="row container mt-3 mb-4">
+        <div class="col-1"></div>
+        <p class="col-11 ">¿No tienes cuenta?<strong><a href="registro.html" class="enlaceRegistro"> Registráte.</a></strong></p>
+      </div>
+    </dialog>
+
+
+
+
     <br class="mb-xxl-5">
     <br>
     <br/>
     <br/>
+
+
+
     <main class="container-fluid mt-xl-5" >
+      <!-- INTRODUCCIÓN -->
         <div class="row">
             <div class="col-2"></div>
             <div class="col-7 col-md-4 h-65 mt-sm-5 mt-3">
@@ -80,6 +139,7 @@
               </div>    
         </div>
         <br>
+        <!-- IMAGENES -->
         <div class="row d-flex justify-content-center">
             <div class="col-lg-3 col-8  mt-2 sombra me-3 imagenHombre position-relative">
                 <button type="button" class="btn btn-light botonesTipos">Ropa hombre</button>
@@ -91,19 +151,33 @@
                 <button type="button" class="btn btn-light botonesTipos4">Accesorios</button>
             </div>
         </div>
+
+
+        <br id="informacion">
         <br>
         <br>
         <br>
         <br>
+
+
+
+        <!-- INFORMACIÓN -->
         <div class="container sombra d-flex flex-column justify-content-center align-items-center informacionC">
             <h1 class="fontTitle mt-4">Información</h1>
             <strong class="w-50 mb-5">HBASESPORT es una marca de renombre en el mundo de la ropa y accesorios para el gimnasio. Nos enorgullece ofrecer a nuestros clientes productos de la más alta calidad, importados directamente desde Noruega, un país conocido por su compromiso con la excelencia y los estándares de la Unión Europea.
-<br>
+              <br>
                 Nuestra misión es proporcionar a los entusiastas del fitness y a aquellos que buscan una vida activa y saludable una amplia gama de productos que no solo sean funcionales y duraderos, sino también con un diseño moderno y atractivo. Creemos que la ropa y los accesorios que elijas para tu entrenamiento deben inspirarte y motivarte a alcanzar tus metas, ya sea en el gimnasio, en un estudio de yoga o en tu rutina diaria de ejercicio. </strong>
         </div>
     </main>
+
+
+
     <br>
     <br>
+
+
+
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <footer class="py-5">
           <div class="row">
@@ -114,7 +188,7 @@
                 <a href=""><img src="https://cdn-icons-png.flaticon.com/512/6016/6016314.png" alt="Foto logo" class="col-3  sombra"></a>
               <ul class="nav flex-column ">
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 linkfooter">Tienda</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 linkfooter">Información</a></li>
+                <li class="nav-item mb-2"><a href="#informacion" class="nav-link p-0 linkfooter">Información</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 linkfooter">Ropa</a></li>
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 linkfooter">Accesorios</a></li>
               </ul>
@@ -147,5 +221,25 @@
         </footer>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+      (function () {
+      const iniciosesion = document.getElementById("inicioSesion");
+      const inicioSesion2 = document.getElementById("inicioSesion2");
+      const cancelButton = document.getElementById("close");
+      var favDialog = document.getElementById("favDialog");
+      inicioSesion2.addEventListener("click", function () {
+        favDialog.showModal();
+      });
+      
+      iniciosesion.addEventListener("click", function () {
+        favDialog.showModal();
+      });
+  
+      // Form cancel button closes the dialog box
+      cancelButton.addEventListener("click", function () {
+        favDialog.close();
+      });
+    })();
+    </script>
 </body>
 </html>
