--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -54,9 +54,8 @@
     
   <!-- DIALOG -->
     <dialog id="favDialog" class="dialog">
-      <div class="row container">
-        <div class="col-11"></div>
-        <button id="close" class="botoncross col-1 mt-2"><i class="bi bi-x-lg cross"></i></button>
+      <div class="col-12 d-flex justify-content-end">
+        <button id="close" class="botoncross mt-2 me-3"><i class="bi bi-x-lg cross"></i></button>
       </div>
       <div class="row container">
           <div class="col-5"></div>
@@ -222,11 +221,16 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
+      
       (function () {
       const iniciosesion = document.getElementById("inicioSesion");
       const inicioSesion2 = document.getElementById("inicioSesion2");
       const cancelButton = document.getElementById("close");
-      var favDialog = document.getElementById("favDialog");
+      const favDialog = document.getElementById("favDialog");
+      if(sessionStorage.getItem("iniciosesion")=="true"){
+        favDialog.showModal();
+        sessionStorage.setItem("iniciosesion","false");
+      }
       inicioSesion2.addEventListener("click", function () {
         favDialog.showModal();
       });
