--- a/proyecto/registro.html
+++ b/proyecto/registro.html
@@ -56,7 +56,7 @@
                         <a href="" class="enlaceRegistro"> Clica aquí.</a></p>
                     </div>
 
-                    <p class="mt-3 mb-4 ms-5">¿Ya tienes cuenta?<strong><a href="registro.html" class="enlaceRegistro"> Inicia sesión.</a></strong></p>
+                    <p class="mt-3 mb-4 ms-5">¿Ya tienes cuenta?<strong><a href="principal.html" id="inicioSesion" class="enlaceRegistro"> Inicia sesión.</a></strong></p>
                     <div class="row d-flex d-md-none contenedorabajo d-flex flex-column align-items-center justify-content-center p-5 text-center">
                         <h1>HBASICSPORT</h1>
                         <p>Registrate ahora en la mejor tienda online de ropa y accesorios de gimnasio.¡No te pierdas nuestra amplia selección de productos de alta calidad! Descubre las últimas tendencias en moda deportiva y eleva tu estilo en el gimnasio. Regístrate hoy y obtén descuentos exclusivos.</p>
@@ -114,5 +114,10 @@
           </div>
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+      document.getElementById('inicioSesion').addEventListener('click',()=>{
+        sessionStorage.setItem("iniciosesion","true");
+      })
+    </script>
 </body>
 </html>
