--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -57,10 +57,13 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body d-flex flex-column">
-                  <a href="" class="w-100 enlacesMenu mb-2">Tienda</a>
-                  <a href="#informacion" class="w-100 enlacesMenu mb-2">Información</a>
-                  <a href="registro.html" class="w-100 enlacesMenu mb-2">Registrarse</a>
-                  <button  id="inicioSesion2" class="inicioMenu w-75">Iniciar Sesión</button>
+                  <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-shop-window"></i> Tienda</a>
+                  <a href="#informacion" class="w-100 enlacesMenu mb-2"><i class="bi bi-info-circle"></i> Información</a>
+                  <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-cart"></i> Carrito</a>
+                  <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-person-circle"></i> Perfil</a>
+                  <a href="" class="w-100 enlacesMenu mb-2 rojo"><i class="bi bi-door-open"></i> Cerrar sesión</a>
+                  <!-- <a href="registro.html" class="w-100 enlacesMenu mb-2"><i class="bi bi-box-arrow-in-right"></i>  Registrarse</a>
+                  <button  id="inicioSesion2" class="inicioMenu w-75">Iniciar Sesión</button> -->
                 </div>
             </div>
         </div>
