--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -60,10 +60,10 @@
                   <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-shop-window"></i> Tienda</a>
                   <a href="#informacion" class="w-100 enlacesMenu mb-2"><i class="bi bi-info-circle"></i> Información</a>
                   <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-cart"></i> Carrito</a>
-                  <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-person-circle"></i> Perfil</a>
-                  <a href="" class="w-100 enlacesMenu mb-2 rojo"><i class="bi bi-door-open"></i> Cerrar sesión</a>
-                  <!-- <a href="registro.html" class="w-100 enlacesMenu mb-2"><i class="bi bi-box-arrow-in-right"></i>  Registrarse</a>
-                  <button  id="inicioSesion2" class="inicioMenu w-75">Iniciar Sesión</button> -->
+                  <!-- <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-person-circle"></i> Perfil</a>
+                  <a href="" class="w-100 enlacesMenu mb-2 rojo"><i class="bi bi-door-open"></i> Cerrar sesión</a> -->
+                  <a href="registro.html" class="w-100 enlacesMenu mb-2"><i class="bi bi-box-arrow-in-right"></i>  Registrarse</a>
+                  <button  id="inicioSesion2" class="inicioMenu w-75">Iniciar Sesión</button>
                 </div>
             </div>
         </div>
@@ -100,6 +100,11 @@
         <div class="row container mt-3">
           <div class="col-1"></div>
           <input id="contraseña" type="text" class="inputBonito w-75 col-11" placeholder="Contraseña">
+        </div>
+        <div class="mt-4 d-flex justify-content-center container">
+          <p class="w-75  mensaje-error d-none"><i class="bi bi-x-circle red"></i> No existe usuario con esa identificación</p>
+          <p class="w-75  mensaje-error d-none"><i class="bi bi-x-circle red"></i>Contraseña es incorrecta</p>
+          <div class="col-1"></div>
         </div>
         <div class="row container mt-4">
           <div class="col-1"></div>
