--- a/proyecto/registro.html
+++ b/proyecto/registro.html
@@ -31,37 +31,52 @@
             <div class="col-12 col-md-6 pt-4 ">
                 <h1 class="row ms-5">Registrate</h1>
                 <form action="">
-                    <div class="input-container row position-relative mt-4 ms-5">
-                        <i class="fas fa-user"></i>
-                        <input id="nombre" type="text" class="inputBonito w-75" placeholder="Nombre">
+                  <div class="input-container row position-relative mt-4 ms-5">
+                      <i class="fas fa-user"></i>
+                      <input id="name" type="text" class="inputBonito w-75" placeholder="Nombre*" required/>
+                  </div>
+                  <div class="input-container row position-relative mt-3 ms-5">
+                      <i class="fas fa-user"></i>
+                      <input id="lastname" type="text" class="inputBonito w-75 " placeholder="Apellido">
+                  </div>
+                  <div class="input-container row position-relative mt-3 ms-5">
+                      <i class="bi bi-house-fill"></i>
+                      <input id="direccion" type="text" class="inputBonito w-75 " placeholder="Direccion*" required/>
+                  </div>
+                  <div class="input-container row position-relative mt-3 ms-5">
+                      <i class="fas fa-envelope"></i>
+                      <input id="email" type="email" class="inputBonito w-75 " placeholder="Correo electrónico*" required/>
+                  </div>
+                  <div class="input-container row position-relative mt-3 ms-5" >
+                      <i class="fas fa-lock"></i>
+                      <input id="pwd" type="password" class="inputBonito w-75 " placeholder="Contraseña*  " required/>
+                  </div>
+                  <div class="row position-relative mt-3 ms-5 contrenedorErroresContraseña" >
+                    <p class="green"> <i class="bi bi-check2"></i> Mínimo 8 caracteres</p>
+                    <p class="green"><i class="bi bi-check2"></i> Mínimo 1 mayúscula</p>
+                    <p class="green"><i class="bi bi-check2"></i> Mínimo 1 minuscula</p>
+                    <p class="green"><i class="bi bi-check2"> </i> Mínimo 1 número</p>
+                    <p class="green"><i class="bi bi-check2"></i> Mínimo 1 caracter especial</p>
+                  </div>
+                  <div class="input-container row position-relative mt-3 ms-5" >
+                      <i class="fas fa-lock"></i>
+                      <input id="rpwd" type="password" class="inputBonito w-75 " placeholder="Repite la contraseña*  " required/>
+                  </div>
+                  <div class="row container mt-4 ms-5">
+                      <input type="submit" value="Registrate" class="col-11 w-75 me-2 botonRegistro">
                     </div>
-                    <div class="input-container row position-relative mt-3 ms-5">
-                        <i class="fas fa-user"></i>
-                        <input id="apellido" type="text" class="inputBonito w-75 " placeholder="Apellido">
-                    </div>
-                    <div class="input-container row position-relative mt-3 ms-5">
-                        <i class="fas fa-envelope"></i>
-                        <input id="nombreCorreo" type="email" class="inputBonito w-75 " placeholder="Correo electrónico">
-                    </div>
-                    <div class="input-container row position-relative mt-3 ms-5">
-                        <i class="fas fa-lock"></i>
-                        <input id="nombreCorreo" type="password" class="inputBonito w-75 " placeholder="Contraseña">
-                    </div>
-                    <div class="row container mt-4 ms-5">
-                        <input type="submit" value="Registrate" class="col-11 w-75 me-2 botonRegistro">
-                      </div>
-                    </form>
-                    <div class="row text-center w-75 ms-5">
-                      <p class="mt-2 olvidado">¿Has olvidado tu contraseña?
-                        <a href="" class="enlaceRegistro"> Clica aquí.</a></p>
-                    </div>
+                  </form>
+                  <div class="row text-center w-75 ms-5">
+                    <p class="mt-2 olvidado">¿Has olvidado tu contraseña?
+                      <a href="" class="enlaceRegistro"> Clica aquí.</a></p>
+                  </div>
 
-                    <p class="mt-3 mb-4 ms-5">¿Ya tienes cuenta?<strong><a href="principal.html" id="inicioSesion" class="enlaceRegistro"> Inicia sesión.</a></strong></p>
-                    <div class="row d-flex d-md-none contenedorabajo d-flex flex-column align-items-center justify-content-center p-5 text-center">
-                        <h1>HBASICSPORT</h1>
-                        <p>Registrate ahora en la mejor tienda online de ropa y accesorios de gimnasio.¡No te pierdas nuestra amplia selección de productos de alta calidad! Descubre las últimas tendencias en moda deportiva y eleva tu estilo en el gimnasio. Regístrate hoy y obtén descuentos exclusivos.</p>
-                    </div>
-                </form>
+                  <p class="mt-3 mb-4 ms-5">¿Ya tienes cuenta?<strong><a href="inicio.php" id="inicioSesion" class="enlaceRegistro"> Inicia sesión.</a></strong></p>
+                  <div class="row d-flex d-md-none contenedorabajo d-flex flex-column align-items-center justify-content-center p-5 text-center">
+                      <h1>HBASICSPORT</h1>
+                      <p>Registrate ahora en la mejor tienda online de ropa y accesorios de gimnasio.¡No te pierdas nuestra amplia selección de productos de alta calidad! Descubre las últimas tendencias en moda deportiva y eleva tu estilo en el gimnasio. Regístrate hoy y obtén descuentos exclusivos.</p>
+                  </div>
+              </form>
             </div>
             <div class="col-6 d-none d-md-flex contenedorDerecha d-flex flex-column align-items-center justify-content-center p-5 text-center">
                 <h1>HBASICSPORT</h1>
