--- a/proyecto/principal.html
+++ b/proyecto/principal.html
@@ -57,7 +57,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body d-flex flex-column">
-                  <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-shop-window"></i> Tienda</a>
+                  <a href="" class="w-100 enlacesMenu mb-2 f-"><i class="bi bi-shop-window"></i> Tienda</a>
                   <a href="#informacion" class="w-100 enlacesMenu mb-2"><i class="bi bi-info-circle"></i> Información</a>
                   <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-cart"></i> Carrito</a>
                   <!-- <a href="" class="w-100 enlacesMenu mb-2"><i class="bi bi-person-circle"></i> Perfil</a>
