--- a/UD4A4  -  Curriculum vitae_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD4A4  -  Curriculum vitae_JoseLuisTarragaSegura_2DAW/index.html
@@ -5,32 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://cdn.urbantecno.com/urbantecno/s/2023-01-05-11-27-elon-musk.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Oswald:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/tesla-2" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Curriculum vitae</title>
 </head>
 <body>
-    <nav class="d-flex">
-        <img src="Twitter-Logo-tumb.png" alt="Logo twitter" class="col-1">
-        <img src="tesla_logo_icon_144806.png" alt="Logo tesla" class="col-1">
-        <img src="SpaceX_working_group_logo.png" alt="Logo space x" class="col-1">
-        <div class="col-6 d-flex align-items-center justify-content-around">
-            <a href="">Información</a>
-            <a href="">Formación</a>
-            <a href="">Empresas</a>
+    <nav class="d-flex flex-column ">
+        <h1 class="12 text-center">ELON MUSK</h1>
+        <div class="col-12 d-flex align-items-center justify-content-around">
+            
+            <a href="#informacion">Información</a>
+            <a href="#formacion">Formación</a>
+            <a href="#empresas">Empresas</a>
         </div>
     </nav>
-    <main class="container pt-5">
-        <h1 class="text-center col-12">CURRICULUM VI<img src="tesla_logo_icon_144806.png" alt="Logo tesla" width="35px">AE</h1>
-        <div class="col-12 d-flex justify-content-start align-items-center">
-            <div class="">
+    <main class="container pt-5 mt-3 p-0 pb-5 mb-5"  id="informacion">
+        <h1 class="text-center col-12 titulo-curriculum">CURRICULUM VI<img src="tesla_logo_icon_144806.png" alt="Logo tesla" width="48px" class="tlogo">AE</h1>
+        <div class="col-12 d-flex justify-content-start align-items-center mt-3" >
+            <div class="col-8 contenedor-perfil d-flex align-items-center justify-content-around">
+                <img class="col-4 ms-4 imagen-perfil-elon" src="https://cloudfront-us-east-1.images.arcpublishing.com/opb/EVZEPU7KSCFXD2EH4ZG7IIQM7E.jpg" alt="imagen perfil elon musk">
+                <div class="col-5">
+                    <p class="text-center ">
+                        Elon Musk, es un empresario, inversor y magnate sudafricano que también posee las nacionalidades canadiense y estadounidense. Es el fundador, consejero delegado e ingeniero jefe de SpaceX; inversor ángel, director general y arquitecto de productos de Tesla, Inc.; fundador de The Boring Company y cofundador de Neuralink, además de ser el director de tecnología de X Corp.
+                    </p>
+                    <p class="text-spacing text-center">
+                        Con un patrimonio neto estimado en unos 207 mil millones de dólares en junio de 2023, Musk es la persona más rica del mundo según el índice de multimillonarios de Bloomberg y la lista de multimillonarios en tiempo real de Forbes.
+                    </p>
+                </div>
+                <div class="rudeas d-flex justify-content-around">
+                    <div>
+
+                    </div>
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="remolque-izquierda col-1">
 
             </div>
-            <div>
+            <img src="cibertruck-removebg-preview.png" alt="Imgagen coche tesla" class="coche-rotacion-izquierda col-2">
+        </div>
+        <div class="col-12 d-flex justify-content-end align-items-center mt-5 " id="formacion">
+            <img src="cibertruck-removebg-preview.png" alt="Imgagen coche tesla" class="coche-rotacion-derecha col-2">
+            <div class="remolque-derecha col-1">
 
             </div>
-            <img src="" alt="">
+            <div class="col-8 contenedor-formacion d-flex align-items-center justify-content-around">
+                <div class="col-5 text-center">
+                    <h3 class="letras-tesla formacion-titulo">Formación</h3>
+                    <p class="subrayado">
+                        En 1992 Elon obtuvo una beca para estudiar Economía y Física en la Universidad de Pensilvania. Recibió sus títulos de economía y física del Wharton School en la Universidad de Pensilvania
+                    </p>
+                    <p class="vuelta">
+                        Después se matriculó en Stanford para hacer el doctorado, pero a los dos días lo abandonó para iniciar su propia empresa.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 d-flex justify-content-start align-items-center mt-5" id="empresas" >
+            <div class="col-8 contenedor-perfil d-flex align-items-center justify-content-around">
+                <img src="SpaceX_working_group_logo.png" alt="" class="col-4">
+                <img src="tesla_logo_icon_144806.png" alt="" class="col-4">
+                <img src="Twitter-Logo-tumb.png" alt="" class="col-4">
+            </div>
+            <div class="remolque-izquierda col-1"></div>
+            <img src="cibertruck-removebg-preview.png" alt="Imgagen coche tesla" class="coche-rotacion-izquierda col-2">
         </div>
     </main>
+    <footer class="py-3 ">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#informacion" class="nav-link px-2 text-muted">Información</a></li>
+          <li class="nav-item"><a href="#formacion" class="nav-link px-2 text-muted">Formación</a></li>
+          <li class="nav-item"><a href="#empresas" class="nav-link px-2 text-muted">Empresas</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2022 Company, Inc</p>
+    </footer>
 </body>
 </html>
