Acabado el focking Curriculum

--- a/UD3A2 - Curriculum interactivo_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD3A2 - Curriculum interactivo_JoseLuisTarragaSegura_2DAW/index.html
@@ -20,6 +20,7 @@
             <a href="#informacion">Información</a>
             <a href="#formacion">Formación</a>
             <a href="#empresas">Empresas</a>
+            <a href="#exp-id-datos">Más datos</a>
         </div>
     </nav>
     <main class="container pt-5 mt-3 p-0 pb-5 mb-5"  id="informacion">
@@ -31,7 +32,7 @@
                     <p class="text-center ">
                         Elon Musk, es un empresario, inversor y magnate sudafricano que también posee las nacionalidades canadiense y estadounidense. Es el fundador, consejero delegado e ingeniero jefe de SpaceX; inversor ángel, director general y arquitecto de productos de Tesla, Inc.; fundador de The Boring Company y cofundador de Neuralink, además de ser el director de tecnología de X Corp.
                     </p>
-                    <p class="text-spacing text-center">
+                    <p class="text-center">
                         Con un patrimonio neto estimado en unos 207 mil millones de dólares en junio de 2023, Musk es la persona más rica del mundo según el índice de multimillonarios de Bloomberg y la lista de multimillonarios en tiempo real de Forbes.
                     </p>
                 </div>
@@ -55,7 +56,7 @@
 
             </div>
             <div class="col-8 contenedor-formacion d-flex align-items-center justify-content-around">
-                <div class="col-5 text-center">
+                <div class="col-12 col-lg-5 text-center">
                     <h3 class="letras-tesla formacion-titulo">Formación</h3>
                     <p class="subrayado">
                         En 1992 Elon obtuvo una beca para estudiar Economía y Física en la Universidad de Pensilvania. Recibió sus títulos de economía y física del Wharton School en la Universidad de Pensilvania
@@ -75,12 +76,39 @@
             <div class="remolque-izquierda col-1"></div>
             <img src="cibertruck-removebg-preview.png" alt="Imgagen coche tesla" class="coche-rotacion-izquierda col-2">
         </div>
+        <div class="col-12 d-flex justify-content-end align-items-center mt-5 " id="exp-id-datos">
+            <img src="cibertruck-removebg-preview.png" alt="Imgagen coche tesla" class="coche-rotacion-derecha col-2">
+            <div class="remolque-derecha col-1">
+
+            </div>
+            <div class="col-8 contenedor-formacion d-flex align-items-center justify-content-around letra-responsive">
+                <div class="col-3 col-lg-4 text-center">
+                    <h3 class="letras-tesla">Experiencia laboral</h3>
+                    <p>-Creador de Zip2, vendida por 300 millones $</p>
+                    <p>-Creador de Paypal, vendida por 1500 millones $</p>
+                    <p>-Dueño de Space X</p>
+                    <p>-Dueño de Tesla motors</p>
+                </div>
+                <div class="col-3 col-lg-4 text-center">
+                    <h3 class="letras-tesla">Idiomas</h3>
+                    <p>-Frances, B2</p>
+                    <p>-Aleman, C1</p>
+                    <p>-Ingles, Nativo</p>
+                </div>
+                <div class="col-3 col-lg-4 text-center">
+                    <h3 class="letras-tesla">Datos personales</h3>
+                    <p>-Hombre más rico del mundo</p>
+                    <p>-Vive en EEUU</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="py-3 ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#informacion" class="nav-link px-2 text-muted">Información</a></li>
           <li class="nav-item"><a href="#formacion" class="nav-link px-2 text-muted">Formación</a></li>
           <li class="nav-item"><a href="#empresas" class="nav-link px-2 text-muted">Empresas</a></li>
+          <li class="nav-item"><a href="#exp-id-datos" class="nav-link px-2 text-muted">Más datos</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Company, Inc</p>
     </footer>
