--- a/UD3A2 - Curriculum interactivo_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD3A2 - Curriculum interactivo_JoseLuisTarragaSegura_2DAW/index.html
@@ -27,8 +27,8 @@
         <h1 class="text-center col-12 titulo-curriculum">CURRICULUM VI<img src="tesla_logo_icon_144806.png" alt="Logo tesla" width="48px" class="tlogo">AE</h1>
         <div class="col-12 d-flex justify-content-start align-items-center mt-3" >
             <div class="col-8 contenedor-perfil d-flex align-items-center justify-content-around">
-                <img class="col-4 ms-4 imagen-perfil-elon" src="https://cloudfront-us-east-1.images.arcpublishing.com/opb/EVZEPU7KSCFXD2EH4ZG7IIQM7E.jpg" alt="imagen perfil elon musk">
-                <div class="col-5">
+                <img class="col-4 ms-4 imagen-perfil-elon d-none d-lg-flex" src="https://cloudfront-us-east-1.images.arcpublishing.com/opb/EVZEPU7KSCFXD2EH4ZG7IIQM7E.jpg" alt="imagen perfil elon musk">
+                <div class="col-12 col-lg-5 ">
                     <p class="text-center ">
                         Elon Musk, es un empresario, inversor y magnate sudafricano que también posee las nacionalidades canadiense y estadounidense. Es el fundador, consejero delegado e ingeniero jefe de SpaceX; inversor ángel, director general y arquitecto de productos de Tesla, Inc.; fundador de The Boring Company y cofundador de Neuralink, además de ser el director de tecnología de X Corp.
                     </p>
@@ -87,7 +87,7 @@
                     <p>-Creador de Zip2, vendida por 300 millones $</p>
                     <p>-Creador de Paypal, vendida por 1500 millones $</p>
                     <p>-Dueño de Space X</p>
-                    <p>-Dueño de Tesla motors</p>
+                    <p class="d-none d-md-block">-Dueño de Tesla motors</p>
                 </div>
                 <div class="col-3 col-lg-4 text-center">
                     <h3 class="letras-tesla">Idiomas</h3>
@@ -110,7 +110,7 @@
           <li class="nav-item"><a href="#empresas" class="nav-link px-2 text-muted">Empresas</a></li>
           <li class="nav-item"><a href="#exp-id-datos" class="nav-link px-2 text-muted">Más datos</a></li>
         </ul>
-        <p class="text-center text-muted">© 2022 Company, Inc</p>
+        <p class="text-center text-muted">© 2023 Jose Luis Tárraga Segura, 2DAW</p>
     </footer>
 </body>
 </html>
