Añadido musica y cosas

--- a/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
@@ -8,10 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Barlow&family=Bebas+Neue&family=Dancing+Script:wght@400;700&family=Dela+Gothic+One&family=Silkscreen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Russo+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body class="d-flex align-items-center justify-content-between flex-column">
+    <audio src="tomp3.cc - Don Omar Tego Calderon Bandolero.mp3" autoplay></audio>
     <main class="col-8 m-4">
         <header class="col-12 p-2">
             <div class="  col-12 d-flex align-items-center p-1 justify-content-between">
@@ -42,14 +45,43 @@
         <main class="col-12">
             <div class="col-12">
                 <img src="logo.png" alt="Logo fast$furius" class="col-4">
-            </div>
-            <div class="col-12">
+                <div class="col-12 d-flex flex-column align-items-center ">
+                    <div class="col-8  header-fake p-3">
+                        <h1 class="text-center"><i>LOS MEJORES COCHES</i></h1>
+                    </div>
+                    <div class="d-flex justify-content-center col-12">
+                        <article class="col-10 mt-5">
+                            <section class=" d-flex justify-content-around col-10">
+                                <div class="col-5 p-4">
+                                    <h2 class="text-center">Top 3</h2>
+                                    <h4>Modelo: Skyline R34 GT-R</h4>
+                                    <h4>HP: 327</h4>
+                                    <h4>0-100km/h: 2,7s</h4>
+                                    <h4>Dueño: Paul walker</h4>
+                                </div>
+                                <img src="" class="col-4" alt="">
+                            </section>
+                            <section class=" d-flex justify-content-around col-10 mt-4">
+                                <img src="" class="col-4" alt="">
+                                <div class="col-5 p-4">
+                                    <h2 class="text-center">Top 2</h2>
+                                    <h4>Modelo: Mitsubishi Eclipse  1995 RS</h4>
+                                    <h4>HP: 420</h4>
+                                    <h4>0-100km/h: 2,4s</h4>
+                                    <h4>Dueño: Brian Oconnors</h4>
+                                </div>
+                            </section>
+                        </article>
+                        <aside class="col-2">
 
+                        </aside>
+                    </div>
+                </div>
             </div>
         </main>
     </main>
     <footer class="col-12 d-flex align-items-center">
-        <button class="col-1 p-2 ms-2"><img src="https://www.pngitem.com/pimgs/m/34-340133_windows-98-icons-png-microsoft-windows-3-1-logo.png" alt="" class="col-5"> Start</button>
+        <button class="col-1 p-2 ms-2"><img src="https://www.pngitem.com/pimgs/m/34-340133_windows-98-icons-png-microsoft-windows-3-1-logo.png" alt="" class="col-5 pixelated"> Start</button>
         <button class="col-2 ms-2 p-2 d-flex justify-content-start align-items-center"><img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Foto Toyota Supra" class="col-3 pixelated"> Fast&Furius</button>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
