--- a/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
@@ -15,6 +15,7 @@
 </head>
 <body class="d-flex align-items-center justify-content-between flex-column">
     <audio src="tomp3.cc - Don Omar Tego Calderon Bandolero.mp3" autoplay></audio>
+   
     <main class="col-8 m-4">
         <header class="col-12 p-2">
             <div class="  col-12 d-flex align-items-center p-1 justify-content-between">
@@ -49,31 +50,59 @@
                     <div class="col-8  header-fake p-3">
                         <h1 class="text-center"><i>LOS MEJORES COCHES</i></h1>
                     </div>
-                    <div class="d-flex justify-content-center col-12">
+                    <div class="d-flex justify-content-center col-12 pe-3">
                         <article class="col-10 mt-5">
-                            <section class=" d-flex justify-content-around col-10">
+                            <section class=" d-flex justify-content-around col-10 ms-4 p-3">
                                 <div class="col-5 p-4">
                                     <h2 class="text-center">Top 3</h2>
                                     <h4>Modelo: Skyline R34 GT-R</h4>
                                     <h4>HP: 327</h4>
                                     <h4>0-100km/h: 2,7s</h4>
-                                    <h4>Dueño: Paul walker</h4>
+                                    <h4>Dueño: Paul Walker</h4>
                                 </div>
-                                <img src="" class="col-4" alt="">
+                                <img src="https://img.fruugo.com/product/1/62/170040621_max.jpg" class="col-4" alt="">
                             </section>
-                            <section class=" d-flex justify-content-around col-10 mt-4">
-                                <img src="" class="col-4" alt="">
+                            <section class=" d-flex justify-content-around col-10 mt-4 ms-4 p-3">
+                                <img src="https://images.squarespace-cdn.com/content/v1/5f7ca9b4bb17060b028086bb/2f3580df-d331-4f50-9fce-73e120b046ba/TFATF-Mitsubishi-Eclipse.jpg" class="col-4" alt="">
                                 <div class="col-5 p-4">
                                     <h2 class="text-center">Top 2</h2>
                                     <h4>Modelo: Mitsubishi Eclipse  1995 RS</h4>
-                                    <h4>HP: 420</h4>
-                                    <h4>0-100km/h: 2,4s</h4>
-                                    <h4>Dueño: Brian Oconnors</h4>
+                                    <h4>HP: 329</h4>
+                                    <h4>0-100km/h: 2,68s</h4>
+                                    <h4>Dueño: Paul Walker</h4>
                                 </div>
                             </section>
+                            <section class=" d-flex justify-content-around col-10 mt-4 ms-4 p-3 mb-2">
+                                <div class="col-5 p-4">
+                                    <h2 class="text-center">Top 1</h2>
+                                    <h4>Modelo: Toyota GR Supra</h4>
+                                    <h4>HP: 330</h4>
+                                    <h4>0-100km/h: 2,6s</h4>
+                                    <h4>Dueño: Paul Walker</h4>
+                                </div>
+                                <img src="https://cdn.topgear.es/sites/navi.axelspringer.es/public/media/image/2021/06/subasta-barrett-jackson-toyota-supra-stunt-1-fast-furious-2383301.jpg" class="col-4" alt="">
+                            </section>
+                            <div class="video-youtube d-block">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZZOu5D_PWLc?si=Nh9_ez4AsqsizgEO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/5BkXzLvqnkc?si=-03R9KN4f3fLhLtv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/NOLlgPn8cIY?si=H6eCmgvtx79wsscO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
                         </article>
-                        <aside class="col-2">
-
+                        <aside class="col-2 d-block">
+                            <div class="col-12 mt-5 me-5" id="anuncio1">
+                                <audio src="tomp3 (mp3cut.net).mp3" id="audioTantoQueDarte"></audio>
+                                <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/diarioas/I5PWQDNH2RLQBPZIZTGDNZIZBU.jpg" class="col-12 pixelated" alt="Anuncio">
+                                <button class=""><i class="bi bi-x-lg mas-borde"></i></button>
+                                <h6 class="col-8"></h6>
+                                <div class="fueguitos col-6 d-flex justify-content-around">
+                                    <img src="y8.gif" alt="Fueguitos" class="col-3">
+                                    <img src="y8.gif" alt="Fueguitos" class="col-3">
+                                    <img src="y8.gif" alt="Fueguitos" class="col-3">
+                                </div>
+                            </div>
+                            <div class="mt-5 col-12 d-flex align-items-center">
+                                <img src="ruleta1.png" class="col-12" alt="Ruleta">
+                            </div>
                         </aside>
                     </div>
                 </div>
@@ -85,5 +114,13 @@
         <button class="col-2 ms-2 p-2 d-flex justify-content-start align-items-center"><img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Foto Toyota Supra" class="col-3 pixelated"> Fast&Furius</button>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+        const audioPlay = document.getElementById('audioTantoQueDarte');
+        const aununcio1 = document.getElementById('anuncio1');
+        aununcio1.addEventListener('click',()=>{
+            audioPlay.play();
+        })
+
+    </script>
 </body>
 </html>
