--- a/UD4A3 - FAKEFLIX/index.html
+++ b/UD4A3 - FAKEFLIX/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="animacionPrincipio.css">
     <link rel="stylesheet" href="index.css">
     <title>JOSFLIX</title>
 </head>
@@ -12,6 +13,18 @@
     <div class="col-12 d-flex justify-content-center align-items-center">
         <div class="col-4 n d-flex justify-content-center">
             <div class="d-flex">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
@@ -44,7 +57,40 @@
         </div>
     </div>
     <div class="circle bg-black col-6">
-
     </div>    
+    <main class="col-12">
+        <nav class="col-12 d-flex align-items-center ps-4">
+            <img src="Netflix.png" alt="Logo Netflix" class="col-1 me-2">
+            <a href="" class="me-2">Series</a>
+            <a href="" class="me-2">Peliculas</a>
+            <a href="" class="me-2">Novedades</a>
+            <a href="" class="">Mi Lista</a>
+        </nav>
+        <header class="col-12 d-flex justify-content-center align-items-center flex-column">
+            <img src="Netflix.png" alt="Logo Netflix" class="col-3 mt-5">
+            <img src="Netflix.png" alt="Logo Netflix" class="col-3 ">
+        </header>
+        <main class="d-flex justify-content-between col-12 mb-2 mt-2">
+            <article class=" rounded d-flex justify-content-between flex-column">
+                <section class="mt-2 ms-2"><h2>Lupin</h2></section>
+                <section class="ms-2 me-2"><p>'Lupin' cuenta la historia de Assane Diop, un hombre marcado por el suicidio de su padre hace varios años tras ser condenado por un crimen que no cometió. 
+                <br>
+                La serie va encaminada a ver cómo intenta esclarecer lo sucedido y buscar venganza por la muerte de su progenitor cuando él apenas era un niño.</p></section>
+                <section class="col-12"><img src="https://i.blogs.es/97625b/cartel-lupin/1366_2000.jpeg" alt="Imagen Lupin" class="col-12" ></section>
+            </article>
+            <article class=" rounded d-flex justify-content-between flex-column">
+                <section><img src="https://i.blogs.es/dda1a8/berlin/840_560.jpeg" alt="Imagen serie Berlin" class="col-12" ></section>
+                <section><h2>Berlín</h2></section>
+                <section><p>La serie Berlín es una precuela de La casa de papel que explora los orígenes de este personaje. 
+                <br>
+                Este drama de suspense y acción comienza tiempo atrás, de vuelta a sus años de gloria, cuando Berlín decide reunir una banda de experimentados ladrones de guante blanco.
+                </p></section>
+            </article>
+        </main>
+        <aside class="col-12 mt-4">
+            <h4 class="col-4">Hola me estoy moviendo que loco </h4>
+        </aside>
+    </main>
+    <audio src="Netflix New Logo Animation 2019.mp3" autoplay class="d-none"></audio>
 </body>
 </html>
