--- a/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/index.html
@@ -12,7 +12,7 @@
         <h1>Horario Jose Luis</h1>
         <h4 >Curso 2023/2024</h4>
         <table >
-            <tr>
+            <tr>    
                 <th><div>HORARIO</div></th>
                 <th><div>LUNES</div></th>
                 <th><div>MARTES</div></th>
@@ -26,11 +26,11 @@
                 <th></th>
                 <th rowspan="2" class="godOf"></th>
                 <th class="pokemon"></th>
-                <th></th>
+                <th class="stray"></th>
                 <th class="assasins"></th>
-                <th class="rached"></th>
                 <th class="spiderman"></th>
-                <th></th>
+                <th class="rached"  ></th>
+                <th class="ghost"></th>
             </tr>
             <tr>
                 <th></th>
@@ -39,37 +39,37 @@
             </tr>
             <tr>
                 <th></th>
-                <th  colspan="2"></th>
+                <th  colspan="2" class="ghost"></th>
                 <th class="assasins"></th>
                 <th rowspan="2" class="rached"></th>
-                <th></th>
-                <th></th>
                 <th class="godOf"></th>
+                <th class="spiderman"></th>
+                <th class="instagram"></th>
             </tr>
             <tr>
                 <th></th>
-                <th colspan="2"></th>
+                <th colspan="2" class="hora-de-comer"></th>
                 <th class="spiderman"></th>
-                <th></th>
-                <th></th>
+                <th class="stray"></th>
+                <th class="youtube"></th>
                 <th class="pokemon"></th>
             </tr>
             <tr>
                 <th></th>
-                <th colspan="3"></th>
-                <th colspan="4"></th>
+                <th colspan="3" class="assasins"></th>
+                <th colspan="4" class="hora-de-comer"></th>
             </tr>
             <tr>
                 <th></th>
-                <th colspan="4" rowspan="2"></th>
-                <th colspan="3" rowspan="2"></th>
+                <th colspan="4" rowspan="2" class="video"></th>
+                <th colspan="3" rowspan="2" class="patreon"></th>
             </tr>
             <tr>
                 <th></th>
             </tr>
             <tr>
                 <th></th>
-                <th colspan="7"></th>
+                <th colspan="7" class="instagram"></th>
             </tr>
         </table>
     </main>
