--- a/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/index.html
@@ -34,7 +34,8 @@
             <tr>
                 <th></th>
                 <th class="godOf"></th>
-                <th class="pokemon" colspan="5"></th>
+                <th class="pokemon" colspan="4"></th>
+                <th class="assasins"></th>
             </tr>
             <tr>
                 <th></th>
